# bi-data-analyst

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
agents/: data_loader.py  insight_agent.py  mock_data.py  orchestrator.py  pattern_agent.py  visualization_agent.py
data/: sample_sales.csv
tests/: test_agents.py  test_cli.py  test_csv_exporter.py  test_data_loader.py  test_models.py  test_multi_sheet.py  test_pattern_agent.py  test_report_generator.py  test_visualization.py
utils/: csv_exporter.py  report_generator.py
